<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Adivina Personaje</string>
    <string name="Si">Si</string>
    <string name="No">No</string>
    <string name="GPer">Guardar personaje</string>
    <string name="nuevo">Nuevo</string>
    <string name="acercaDe">Acerca De</string>
    <string name="pers">¿Su personaje es/tiene</string>
    <string name="title_activity_juego">Adivina Personaje</string>
    <string name="jugar">Jugar</string>
    <string name="salir">Salir</string>
    <string name="title_activity_acerca_de">Adivina Personaje</string>
    <string name="aD">Aplicación creada por Marta Losada López para el proyecto de fin de ciclo de Desarrollo de Aplicaciones Multiplataforma del curso 2012-2014</string>
    <string name="per">SU PERSONAJE ES...</string>
    <string name="ok">OK</string>
    <string name="interrogacion">\?</string>
    <string name="title_activity_jugar">Jugar</string>
    <string name="action_settings">Settings</string>
    <string name="nombre">Escriba el nombre del personaje</string>
    <string name="apellido">Escriba el apellido del personaje</string>
    <string name="piense">Piense en un personaje español que sea político, cantante, deportista o actor</string>

</resources>