<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/editText1"
        android:text="@string/apellido"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#104E8B"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button5"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:background="@drawable/fondo"
        android:text="@string/Si"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:text="@string/nombre"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignRight="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:ems="10"
        android:enabled="false"
        android:inputType="text"
        android:visibility="invisible" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignRight="@+id/textView3"
        android:layout_below="@+id/textView4"
        android:ems="10"
        android:enabled="false"
        android:inputType="text"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button7"
        android:layout_width="82dp"
        android:layout_height="31dp"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/fondo"
        android:enabled="true"
        android:text="@string/ok"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignTop="@+id/button5"
        android:background="@drawable/fondo"
        android:text="@string/No"
        android:textSize="15sp" />

</RelativeLayout>
