<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Juego" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:paddingLeft="20dp"
        android:text="@string/pers"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#104E8B"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.12"
            android:lines="1"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#104E8B"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.02"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:text="\?"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#104E8B"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp" >

        <Button
            android:id="@+id/button3"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.49"
            android:background="@drawable/fondo"
            android:text="@string/Si"
            android:textColor="#104E8B"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button4"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.50"
            android:background="@drawable/fondo"
            android:text="@string/No"
            android:textColor="#104E8B"
            android:textSize="30sp" />
    </LinearLayout>

</TableLayout>